--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 <div class="cardInside">
     <h3 class="back">HAPPY BIRTHDAY!</h3>
     <p>Dear Clarice,</p> 
-    <p>Happy Birthday!! Ang gusto ko lang sabihin ay enjoyin mo ang araw na to. Wag ka masyado magpakastress last year sabi mo pa na 2023 clarice year so dapat tuparin mo yun. Wag kana kulongin sarili mo sa mga past mo na di maganda end the chapter then create a new chapter kasi ikaw yung author na buhay mo story mo yan kaya ikaw lang din makakagawa nyan ang gusto ko lang is makita ka masaya tinutupad mga pangarap mo na makapunta ng Spain. E wish mo na sana okay lang lahat pag nagpa check up kana and also na magka baby kapa soon. If you feel sad or something just say "Cheese". </p>
-
-<audio controls id="audio">
+	<center>
+    <a href="clarice.txt" download>Click Me</a>
+	</center>
+<audio id="player" controls autoplay>
   <source src="clarice.ogg" type="audio/ogg">
   <source src="clarice.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
